Module 3 Activity Completed
geojson and AJAX stuff

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <body>
       <div id="mydiv"></mydiv>
       <script type="text/javascript" src="lib/jquery.js"></script>
-      <script type="text/javascript" src="js/main_with_debug.js"></script>
+      <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
